// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsContainer component Rendering test - empty 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <ItemsContainer
    config={
      Object {
        "itemsPerRow": 4,
        "resultSortConfig": Object {
          "options": Array [
            "Release date",
            "Rating",
          ],
          "selectedIndex": "1",
          "title": "Sort by",
        },
        "resultsCountConfig": Object {
          "title": "movies found",
        },
      }
    }
    items={Array []}
  >
    <div
      className="container"
    >
      <NoItemLabel>
        <div
          className="title"
        >
          No films found
        </div>
      </NoItemLabel>
    </div>
  </ItemsContainer>
</Provider>
`;

exports[`ItemsContainer component Rendering test - with items 1`] = `
<Provider
  store={
    Object {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <ItemsContainer
    config={
      Object {
        "itemsPerRow": 4,
        "resultSortConfig": Object {
          "options": Array [
            "Release date",
            "Rating",
          ],
          "selectedIndex": "1",
          "title": "Sort by",
        },
        "resultsCountConfig": Object {
          "title": "movies found",
        },
      }
    }
    items={
      Array [
        Object {
          "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
          "duration": 145,
          "genres": Array [
            "action",
          ],
          "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
          "rating": 7.2,
          "releaseDate": "2014",
          "title": "Interstellar",
        },
        Object {
          "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
          "duration": 145,
          "genres": Array [
            "action2",
          ],
          "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
          "rating": 7.2,
          "releaseDate": "2015",
          "title": "Interstellar 2",
        },
        Object {
          "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
          "duration": 145,
          "genres": Array [
            "action 3",
          ],
          "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
          "rating": 7.2,
          "releaseDate": "2016",
          "title": "Interstellar 3",
        },
      ]
    }
  >
    <div
      className="container"
    >
      <Connect(ItemBody)
        item={
          Object {
            "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
            "duration": 145,
            "genres": Array [
              "action",
            ],
            "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
            "rating": 7.2,
            "releaseDate": "2014",
            "title": "Interstellar",
          }
        }
        key="0"
      >
        <ItemBody
          item={
            Object {
              "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
              "duration": 145,
              "genres": Array [
                "action",
              ],
              "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
              "rating": 7.2,
              "releaseDate": "2014",
              "title": "Interstellar",
            }
          }
          updateSelectedItemFunc={[Function]}
        >
          <div
            className="body"
            onClick={[Function]}
          >
            <Image>
              <div
                className="imagecontainer"
              >
                <img
                  className="image"
                />
              </div>
            </Image>
            <ReleaseDate>
              <div
                className="releasedate"
              />
            </ReleaseDate>
            <Title
              title="Interstellar"
            >
              <div
                className="title"
              >
                Interstellar
              </div>
            </Title>
            <Genre
              genre="action"
            >
              <div
                className="genre"
              >
                action
              </div>
            </Genre>
          </div>
        </ItemBody>
      </Connect(ItemBody)>
      <Connect(ItemBody)
        item={
          Object {
            "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
            "duration": 145,
            "genres": Array [
              "action2",
            ],
            "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
            "rating": 7.2,
            "releaseDate": "2015",
            "title": "Interstellar 2",
          }
        }
        key="1"
      >
        <ItemBody
          item={
            Object {
              "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
              "duration": 145,
              "genres": Array [
                "action2",
              ],
              "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
              "rating": 7.2,
              "releaseDate": "2015",
              "title": "Interstellar 2",
            }
          }
          updateSelectedItemFunc={[Function]}
        >
          <div
            className="body"
            onClick={[Function]}
          >
            <Image>
              <div
                className="imagecontainer"
              >
                <img
                  className="image"
                />
              </div>
            </Image>
            <ReleaseDate>
              <div
                className="releasedate"
              />
            </ReleaseDate>
            <Title
              title="Interstellar 2"
            >
              <div
                className="title"
              >
                Interstellar 2
              </div>
            </Title>
            <Genre
              genre="action2"
            >
              <div
                className="genre"
              >
                action2
              </div>
            </Genre>
          </div>
        </ItemBody>
      </Connect(ItemBody)>
      <Connect(ItemBody)
        item={
          Object {
            "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
            "duration": 145,
            "genres": Array [
              "action 3",
            ],
            "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
            "rating": 7.2,
            "releaseDate": "2016",
            "title": "Interstellar 3",
          }
        }
        key="2"
      >
        <ItemBody
          item={
            Object {
              "description": "is a 2014 British-American epic science fiction film directed and produced by Christopher Nolan. ... Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole near Saturn in search of a new home for humanity.",
              "duration": 145,
              "genres": Array [
                "action 3",
              ],
              "image": "https://m.media-amazon.com/images/M/MV5BZjdkOTU3MDktN2IxOS00OGEyLWFmMjktY2FiMmZkNWIyODZiXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_SX675_AL_.jpg",
              "rating": 7.2,
              "releaseDate": "2016",
              "title": "Interstellar 3",
            }
          }
          updateSelectedItemFunc={[Function]}
        >
          <div
            className="body"
            onClick={[Function]}
          >
            <Image>
              <div
                className="imagecontainer"
              >
                <img
                  className="image"
                />
              </div>
            </Image>
            <ReleaseDate>
              <div
                className="releasedate"
              />
            </ReleaseDate>
            <Title
              title="Interstellar 3"
            >
              <div
                className="title"
              >
                Interstellar 3
              </div>
            </Title>
            <Genre
              genre="action 3"
            >
              <div
                className="genre"
              >
                action 3
              </div>
            </Genre>
          </div>
        </ItemBody>
      </Connect(ItemBody)>
    </div>
  </ItemsContainer>
</Provider>
`;
